--- a/style.css
+++ b/style.css
@@ -15,41 +15,44 @@ section{
     display:flex;
     flex-wrap: wrap;
     gap: 1rem;
-    width: 100vw;
-    height:100vh;
 }
 
 img{
-    padding: 2em;
-    padding-top: 0;
-    margin-left:1em;
+    position:flex;
     display:flex; 
-    border-radius: 100em;
-    width: 30em;
-    height: 40em;
+    border-radius: 30em;
+    width: 23em;
+    height: 24em;
+    margin-top: 27vh;
+    margin-left:3vw;
+}
+
+#designation{
+    padding: 5em;
+    margin-top: 15vh;
+    margin-left:4vw;
+    color: aliceblue;
+    display: flex;
+    position: flex;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    flex-wrap:wrap;
+    width:45vw;
 }
 
 h1{
-    margin-left:2em;
-    color: aliceblue;
     display: flex;
-    width:30vw;
-    height:70vh;
-    align-items: center;
-    justify-content: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 5em;
-    padding-left:1em;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 #designation p{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, serif;
-    color: aliceblue;
-    display: flex;
-    position: relative;
-    margin: 0;
-    padding:0;
-    justify-content: center;
-    text-align: center;
+    display:flex;
+    flex-wrap:wrap;
+    font-size: 1em;
+    text-transform:uppercase;
+    margin-top:1.5vh;
+    margin-left:0.2vw;
+    padding-top: 0;
 }
 
