--- a/main-styles.css
+++ b/main-styles.css
@@ -1,7 +1,21 @@
-html{
-    border:0;
-    margin:0;
-}
+html {
+    border: 0;
+    margin: 0;
+    animation-name: start;
+    animation-duration: 2s; 
+  }
+  
+  @keyframes start {
+    0% {
+      filter: blur(10px); 
+      opacity: 0; 
+    }
+    100% {
+      filter: blur(0); 
+      opacity: 1; 
+    }
+  }
+  
 
 body{
     margin: 0;
@@ -72,6 +86,11 @@ a{
     text-align: right;
     color: aliceblue;
     text-decoration: none;
+}
+
+#home{
+    text-decoration: solid 1px underline white;
+    text-underline-offset: 4px;
 }
 
 footer{
