--- a/contact-styles.css
+++ b/contact-styles.css
@@ -47,7 +47,6 @@ a{
     text-underline-offset: 4px;
 }
 
-
 #section-container{
     padding: 22em;
     padding-top:10em;
@@ -58,7 +57,14 @@ a{
     width: 50em;
 }
 
-#contact-section-1 {
+form{
+  padding-top:2em;
+  padding-left:2em;
+  align-items: center;
+  justify-items: center;
+}
+
+#contact-section {
     display: flex;
     background-color: rgba(247, 247, 247, 0.2); 
     min-width: 40em;
@@ -68,8 +74,8 @@ a{
   }
 
 #div-name{
-  margin: 1em;
-  padding: 1em;  
+  margin: 0.5em;
+  padding: 0.5em;  
 }
 
 label {
@@ -80,12 +86,15 @@ label {
 #inputName {
   color: #333;
   background-color: #f4f4f4;
-  padding: 10px;
+  padding: 1em;
+  margin-left: 2em;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
   height: 1em;
-  outline: none;
+  width: 30em;
+  outline: none;  
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #inputName::placeholder {
@@ -93,19 +102,23 @@ label {
 }
 
 #div-email{
-  margin: 1em;
-  padding: 1em;  
+  margin: 0.5em;
+  padding: 0.5em;  
 }
 
 #inputEmail {
   color: #333;
   background-color: #f4f4f4;
-  padding: 10px;
+  padding: 1em;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
   height: 1em;
+  width: 30em;
   outline: none;
+  align-items: flex-end;
+  margin-left: 4.7em;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #inputEmail::placeholder {
@@ -113,22 +126,39 @@ label {
 }
 
 #div-feedback{
-  margin: 1em;
-  padding: 1em;  
+  margin: 0.5em;
+  padding: 0.5em;  
 }
 
 #inputFeedback {
+  text-align: left;
   color: #333;
   background-color: #f4f4f4;
-  padding: 10px;
+  padding: 1em;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  height: 1em;
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
+  height: 5em;
+  width:30em;
   outline: none;
+  text-wrap: wrap;
+  flex-wrap: wrap;
+  word-wrap: wrap;
+  margin-left:2.3em;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #inputFeedback::placeholder {
   color: rgb(181, 180, 180,0.8);
 }
 
+#btnSubmit{
+  position: flex;
+  width: 5em;
+  height: 2em;
+  border-radius: 5px;
+  border: none;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  align-items: center;
+  justify-items: center;
+}
