--- a/contact-styles.css
+++ b/contact-styles.css
@@ -24,6 +24,18 @@ html {
     background-color: rgb(66, 33, 33);
 }
 
+form{
+  padding-left:2em;
+}
+
+h1{
+  padding-top: 0.5em;
+  position: flex;
+  flex-wrap: wrap;  
+  color: rgb(255,255,255);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 #nav-bar{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-transform:uppercase;
@@ -48,20 +60,13 @@ a{
 }
 
 #section-container{
-    padding: 22em;
+    padding-left: 2em;
     padding-top:10em;
-    position:relative;
+    position:flex;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 50em;
-}
-
-form{
-  padding-top:2em;
-  padding-left:2em;
-  align-items: center;
-  justify-items: center;
 }
 
 #contact-section {
@@ -70,7 +75,7 @@ form{
     min-width: 40em;
     min-height: 25em;
     border-radius: 2em;
-    transition-duration: 0.5s;
+    padding:1em;
   }
 
 #div-name{
@@ -139,11 +144,12 @@ label {
   border-radius: 5px;
   box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
   height: 5em;
-  width:30em;
-  outline: none;
+  max-width:30em;
+  max-height: 5em;
+  min-width:30em;
+  min-height: 5em;
   text-wrap: wrap;
-  flex-wrap: wrap;
-  word-wrap: wrap;
+  outline: none;
   margin-left:2.3em;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -154,11 +160,12 @@ label {
 
 #btnSubmit{
   position: flex;
-  width: 5em;
+  width: 6em;
   height: 2em;
   border-radius: 5px;
   border: none;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  align-items: center;
-  justify-items: center;
+  margin-top: 1em;
+  margin-left: 35em;
+  box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
 }
