--- a/main-styles.css
+++ b/main-styles.css
@@ -31,24 +31,23 @@ body{
 
 section{
     display:flex;
-    flex-wrap: wrap;
-    gap: 1rem;
 }
 
 img{
     position:flex;
     display:flex; 
-    border-radius: 30em;
-    width: 23em;
-    height: 24em;
-    margin-top: 22vh;
+    border-radius: 100em;
+    width: 50vh;
+    height: 50vh;
+    margin-top: 25vh;
     margin-left:3vw;
 }
 
 #designation{
-    padding: 5em;
-    margin-top: 5vh;
+    padding: 4vw;
+    margin-top: 15vh;
     margin-left:4vw;
+    padding-bottom: 0;
     color: aliceblue;
     display: flex;
     position: flex;
@@ -60,19 +59,20 @@ img{
 h1{
     display: flex;
     text-wrap:wrap;
-    font-size: 5em;
+    font-size: 5vw;
     margin-bottom: 0;
-    padding-bottom: 0;
 }
 
 #designation p{
-    display:flex;
-    text-wrap:wrap;
-    font-size: 1em;
+    /* display:flex; */
+    position:relative;
+    /* text-wrap:wrap; */
+    font-size: 1vw;
     text-transform:uppercase;
-    margin-top:0;
-    margin-left:0.2vw;
+    margin-top: 0;
+    margin-left: 0.2vw;
     padding-top: 0;
+    top:0;
 }
 
 #nav-bar{
@@ -85,6 +85,7 @@ h1{
     gap:5vw;
     margin-top:4vh;
     right:3vw;
+    font-size: 2.5vh;
 }
 
 a{
@@ -108,4 +109,6 @@ footer{
     height:10vh;
     bottom:0;
 }
+
+
 
