--- a/main-styles.css
+++ b/main-styles.css
@@ -95,8 +95,8 @@ a{
 }
 
 #home{
-    text-decoration: solid 1px underline white;
-    text-underline-offset: 4px;
+    text-decoration: solid 0.2vh underline white;
+    text-underline-offset: 0.5vh;
 }
 
 footer{
@@ -110,5 +110,22 @@ footer{
     bottom:0;
 }
 
+#linkedin_logo{
+    background-color: white;
+    width: 10px;
+    height: 10px;
+}
+
+#facebook_logo{
+    background-color: white;
+    width: 10px;
+    height: 10px;
+}
+
+#whatsapp_logo{
+    background-color: white;
+    width: 10px;
+    height: 10px;
+}
 
 
