--- a/projects-styles.css
+++ b/projects-styles.css
@@ -44,8 +44,8 @@ a{
 }
 
 #projects{
-    text-decoration: solid 1px underline white;
-    text-underline-offset: 4px;
+  text-decoration: solid 0.2vh underline white;
+  text-underline-offset: 0.5vh;
 }
 
 
