--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,19 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
+@keyframes changeBackgroundColor {
+  0% { background-color: #b1dffe; }
+  20% { background-color: #a7f6c8; }
+  40% { background-color: #e5e6a0; } 
+  60% { background-color: #e5e6a0; } 
+  80% { background-color: #a7f6c8; } 
+  100% { background-color: #b1dffe; } 
+}
+
 * {
   margin: 0;
   padding: 0;
+  animation: changeBackgroundColor 20s infinite;
 }
 
 body {
@@ -39,6 +49,11 @@ nav {
   height: 17vh;
 }
 
+nav .logo a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
 .nav-links {
   gap: 2rem;
   list-style: none;
@@ -48,7 +63,7 @@ nav {
 a {
   color: rgb(80, 80, 80);
   text-decoration: none;
-  text-decoration-color: white;
+  text-decoration-color: rgb(0, 0, 0);
 }
 
 a:hover {
@@ -97,7 +112,6 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -150,7 +164,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  height: 100vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -175,6 +189,11 @@ section {
   width: 400px;
   margin: auto 0;
 }
+
+.section__pic-container img{
+  border-radius:100%;
+}
+
 
 .section__text {
   align-self: center;
@@ -222,7 +241,7 @@ section {
 }
 
 .btn {
-  font-weight: 600;
+  font-weight:700;
   transition: all 300ms ease;
   padding: 1rem;
   width: 8rem;
@@ -232,29 +251,15 @@ section {
 .btn-color-1,
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
+  color: rgb(0, 0, 0);
+  box-shadow: 3px 3px black;
 }
 
 .btn-color-1:hover,
 .btn-color-2:hover {
   cursor: pointer;
-}
-
-.btn-color-1,
-.btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
-}
-
-.btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
-
-.btn-color-2 {
-  background: none;
-}
-
-.btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
+  translate: 3px 3px;
+  box-shadow: 0px 0px black;
 }
 
 .btn-container {
@@ -283,24 +288,48 @@ section {
   display: flex;
 }
 
+.section__pic-container_next {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
 .about-pic {
   border-radius: 2rem;
 }
 
-.arrow {
+.up-arrow {
+  position: absolute;
+  right: -5rem;
+  top: 2.5rem;
+  font-size:x-large;
+}
+
+.up-arrow:hover{
+  text-decoration: none;
+}
+
+.down-arrow {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
+  font-size:x-large;
+}
+
+.down-arrow:hover{
+  text-decoration: none;
 }
 
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background-color: rgb(163, 244, 244);
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  margin:auto;
 }
 
 .section-container {
@@ -314,20 +343,20 @@ section {
   margin: auto 0;
 }
 
-/* EXPERIENCE SECTION */
+/* SKILLS SECTION */
 
-#experience {
+#skills {
   position: relative;
 }
 
-.experience-sub-title {
+.skills-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
 }
 
-.experience-details-container {
+.skills-details-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -341,6 +370,11 @@ section {
   gap: 2.5rem;
   justify-content: space-around;
 }
+
+.article-container article div{
+  justify-content: center;
+}
+
 
 article {
   display: flex;
@@ -361,7 +395,7 @@ article .icon {
 
 .color-container {
   border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  background-color: rgb(163, 244, 244);
 }
 
 .project-img {
@@ -395,7 +429,7 @@ article .icon {
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
-  background: (250, 250, 250);
+  background-color: rgb(163, 244, 244);
   margin: 2rem auto;
   padding: 0.5rem;
 }
