--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,14 @@ section {
   border-radius: 2rem;
 }
 
+.btn-color-2 a{  
+  color: rgb(0, 0, 0);
+}
+
+.btn-color-2 a:hover{  
+  text-decoration: none;
+}
+
 .btn-color-1,
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
@@ -399,9 +407,9 @@ article .icon {
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .project-title {
