--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ section {
 
 .up-arrow {
   position: absolute;
-  right: -5rem;
+  right: -6rem;
   top: 2.5rem;
   font-size:x-large;
 }
@@ -320,7 +320,7 @@ section {
 
 .down-arrow {
   position: absolute;
-  right: -5rem;
+  right: -6rem;
   bottom: 2.5rem;
   font-size:x-large;
 }
@@ -476,4 +476,94 @@ footer p {
 #bottom{
   text-align: center;
   margin-bottom: 20px ;
+}
+
+.popup_up_1,
+.popup_up_2,
+.popup_up_3 {
+  display: None;
+  position: absolute;
+  top: 40px;
+  font-size: small;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.popup_down_1,
+.popup_down_2,
+.popup_down_3 {
+  display: None;
+  font-size: small;
+  position: absolute;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;  
+  bottom: 40px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.popup_up_1{
+  right: -13px;    
+}
+
+.popup_up_2{
+  right: -15px;
+}
+
+.popup_up_3{
+  right: -10px;
+}
+
+.popup_down_1{
+  right: -10px;
+}
+
+.popup_down_2{
+  right: -20px;
+}
+
+.popup_down_3{
+  right: -20px;
+}
+
+.up-arrow-1:hover .popup_up_1 {
+  display:block;
+}
+.up-arrow-2:hover .popup_up_2 {
+  display: block;
+}
+.up-arrow-3:hover .popup_up_3 {
+  display: block;
+}
+.down-arrow-1:hover .popup_down_1 {
+  display: block;
+}
+.down-arrow-2:hover .popup_down_2 {
+  display: block;
+}
+.down-arrow-3:hover .popup_down_3 {
+  display: block;
+}
+
+.up-arrow-1:hover{
+  scale:1.3;
+}
+.up-arrow-2:hover{
+  scale:1.3;
+}
+.up-arrow-3:hover{
+  scale:1.3;
+}
+.down-arrow-1:hover{
+  scale:1.3;
+}
+.down-arrow-2:hover{
+  scale:1.3;
+}
+.down-arrow-3:hover{
+  scale:1.3;
 }
