--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,7 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  /* background-color: rgb(163, 244, 244); */
+  background-color: rgb(255, 255, 255, 0.1);
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
