--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,7 @@ article .icon {
 }
 
 .contact-info-container p a:hover {
-  text-shadow: 1px 1px 0px rgba(255, 255, 255);
+  text-shadow: 0px 0px 10px rgb(255, 255, 255);
   color: rgb(255, 255, 255);
 }
 
