--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ h1, h2, h3, h3 i {
 }
 
 .lasith{
-  color: rgb(0, 205, 251);
-  text-shadow: 1px 1px 3px black;
+  color: rgb(112, 221, 223);
+  text-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
 
 p {
