--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   font-family: "Poppins", sans-serif;
   /* background-image: url("background-images/background-02.jpg"); */
   /* background-size:cover; */
-  background: linear-gradient(to bottom, #52a3ffe0, #003e5a);
+  background: #003e5a;
 }
 
 html {
