--- a/styles.css
+++ b/styles.css
@@ -1,511 +1,146 @@
-/* GENERAL */
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-
-
-
-* {
-  margin: 0;
-  padding: 0;  
-}
-
+/* Global Styles */
 body {
-  font-family: "Poppins", sans-serif;
-  /* background-image: url("background-images/background-02.jpg"); */
-  /* background-size:cover; */
-  background: #003e5a;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-h1, h2, h3, h3 i {
-  color: rgb(155, 233, 251);
-}
-
-.lasith{
-  color: rgb(112, 221, 223);
-  text-shadow: 0px 0px 5px rgb(0, 0, 0);
-}
-
-p {
-  color: rgb(255, 255, 255);
-}
-
-/* TRANSITION */
-
-a,
-.btn {
-  transition: all 300ms ease;
-}
-
-/* DESKTOP NAV */
-
-nav,
-.nav-links {
-  display: flex;
-}
-
-nav {
-  justify-content: space-around;
-  align-items: center;
-  height: 17vh;
-}
-
-nav .logo a{
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-}
-
-.nav-links {
-  gap: 2rem;
-  list-style: none;
-  font-size: 1.5rem;
-}
-
-a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-
-a:hover {
-  color: rgb(0, 205, 251);
-  text-shadow: 1px 1px 0px rgb(0, 0, 0);
-}
-
-.btn-container a:hover {
-  text-shadow: none;
-
-}
-
-.logo {
-  font-size: 2rem;
-}
-
-.logo:hover {
-  cursor: default;
-}
-
-/* HAMBURGER MENU */
-
-#hamburger-nav {
-  display: none;
-}
-
-.hamburger-menu {
-  position: relative;
-  display: inline-block;
-}
-
-.hamburger-icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  width: 30px;
-  cursor: pointer;
-}
-
-.hamburger-icon span {
-  width: 100%;
-  height: 2px;
-  background-color: black;
-  transition: all 0.3 ease-in-out;
-}
-
-.menu-links {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: fit-content;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.3 ease-in-out;
-}
-
-.menu-links a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  transition: all 0.3 ease-in-out;
-}
-
-.menu-links li {
-  list-style: none;
-}
-
-.menu-links.open {
-  max-height: 300px;
-}
-
-.hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(10px, 5px);
-}
-
-.hamburger-icon.open span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(10px, -5px);
-}
-
-.hamburger-icon span:first-child {
-  transform: none;
-}
-
-.hamburger-icon span:first-child {
-  opacity: 1;
-}
-
-.hamburger-icon span:first-child {
-  transform: none;
-}
-
-/* SECTIONS */
-
-section {
-  padding-top: 4vh;
-  height: 100vh;
-  margin: 0 10rem;
-  box-sizing: border-box;
-  min-height: fit-content;
-}
-
-.section-container {
-  display: flex;
-}
-
-/* PROFILE SECTION */
-
-#profile {
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  height: 80vh;
-}
-
-.section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
-
-.section__pic-container img{
-  border-radius:100%;
-}
-
-
-.section__text {
-  align-self: center;
-  text-align: center;
-}
-
-.section__text p {
-  font-weight: 600;
-}
-
-.section__text__p1 {
-  text-align: center;
-  letter-spacing: 1px;
-}
-
-.section__text__p2 {
-  letter-spacing: 1px;
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
-}
-
-.title {
-  font-size: 4rem;
-  text-align: center;
-}
-
-#socials-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-}
-
-.text-container{
-  text-align: justify;
-}
-
-/* ICONS */
-
-.icon {
-  cursor: pointer;
-  height: 2rem;
-}
-
-/* BUTTONS */
-
-.btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  margin-top: 5vh;
-}
-
-.btn {
-  font-weight:700;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
-}
-
-.btn-color-2 a{  
-  color: rgb(0, 0, 0);
-}
-
-.btn-color-2 a:hover{  
-  text-decoration: none;
-}
-
-.btn-color-1,
-.btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
-  color: rgb(0, 0, 0);
-  box-shadow: 3px 3px rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255, 0.6);
-}
-
-.btn-color-1:hover,
-.btn-color-2:hover {
-  cursor: pointer;
-  translate: 3px 3px;
-  box-shadow: 0px 0px black;
-}
-
-.btn-container {
-  gap: 1rem;
-}
-
-/* ABOUT SECTION */
-
-#about {
-  position: relative;
-}
-
-.about-containers {
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
-.about-details-container {
-  justify-content: center;
-  flex-direction: column;
-}
-
-.about-containers,
-.about-details-container {
-  display: flex;
-}
-
-
-.section__pic-container_next {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
-
-.about-pic {
-  border-radius: 2rem;
-}
-
-.up-arrow {
-  position: absolute;
-  right: -6rem;
-  top: 2.5rem;
-  font-size:x-large;
-}
-
-.up-arrow:hover{
-  text-decoration: none;
-}
-
-.down-arrow {
-  position: absolute;
-  right: -6rem;
-  bottom: 2.5rem;
-  font-size:x-large;
-}
-
-.down-arrow:hover{
-  text-decoration: none;
-}
-
-.details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background-color: rgb(255, 255, 255, 0.1);
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
-  margin:auto;
-}
-
-.section-container {
-  gap: 4rem;
-  height: 80%;
-}
-
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
-
-/* SKILLS SECTION */
-
-#skills {
-  position: relative;
-}
-
-.skills-sub-title {
-  color: rgb(255, 255, 255);
-  font-weight: 600;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
-}
-
-.skills-details-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
-}
-
-.article-container article div{
-  justify-content: center;
-}
-
-
-article {
-  display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
-}
-
-article .icon {
-  cursor: default;
-}
-
-/* PROJECTS SECTION */
-
-#projects {
-  position: relative;
-}
-
-.color-container {
-  border-color: rgb(163, 163, 163);
-  /* background-color: rgb(163, 244, 244); */
-}
-
-.project-img {
-  border-radius: 30px;
-  width: 100%;
-  height: 100%;
-}
-
-.project-title {
-  margin: 1rem;
-  color: rgb(242, 242, 242);
-}
-
-.project-btn {
-  color: rgb(0, 0, 0);
-  border-color: rgb(163, 163, 163);
-}
-
-/* CONTACT */
-
-#contact {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 70vh;
-}
-
-.contact-info-upper-container {
-  display: flex;
-  justify-content: center;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  /* background-color: rgb(163, 244, 244); */
-  margin: 2rem auto;
-  padding: 0.5rem;
-}
-
-.contact-info-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  margin: 1rem;
-}
-
-.contact-info-container p {
-  font-size: larger;
-}
-
-.contact-info-container p a:hover{
-  text-shadow: 0px 0px 2px rgb(255, 255, 255);
-  color: rgb(255, 255, 255);
-}
-
-.contact-icon {
-  cursor: default;
-}
-
-.email-icon {
-  height: 2.5rem;
-}
-
-i {
-  color:white;
-}
-
-/* FOOTER SECTION */
-
-footer {
-  height: 26vh;
-  margin: 0 1rem;
-}
-
-footer p {
-  text-align: center;
-}
-
-#bottom{
-  text-align: center;
-  margin-bottom: 20px ;
-}
-
-.project_code{
-  font-size: medium;
-}
-
-.project_code:hover{
-  text-shadow: none;
+    background-color: #000;
+    color: #fff;
+    font-family: "Montserrat", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    min-height: 100vh;
+}
+
+/* Navbar Styles */
+.navbar {
+    padding: 1.5rem 0;
+    position: fixed;
+    width: 90vw;
+    top:0;
+    left:5vw;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    z-index: 1000;
+}
+
+.navbar-brand {
+    color: #0ff !important;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.nav-link {
+    color: #fff !important;
+    margin: 0 1rem;
+    transition: color 0.3s ease;
+}
+
+.nav-link:hover {
+    color: #0ff !important;
+}
+
+.contact-btn {
+    background-color: #333;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+}
+
+.contact-btn:hover {
+    background-color: #0ff;
+    color: #000 !important;
+}
+
+/* Hero Section */
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:end;
+    min-height: 100vh;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    position: relative;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+    ), url('./Images/Lasith_bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+}
+
+.main-title {
+    font-size: 4.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    position: relative;
+    z-index: 2;
+}
+
+.animated-text {
+    color: #00ffff;
+}
+
+.subtitle {
+    font-size: 1rem;
+    letter-spacing: 3px;
+    margin-bottom: 2rem;
+    color: #00ffff;
+    position: relative;
+    z-index: 2;
+}
+
+.connect-btn {
+    background-color: transparent;
+    border: 2px solid #0ff;
+    color: #0ff;
+    padding: 0.8rem 2rem;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 100px;
+    transition: all 0.3s ease;
+    position: relative;
+    z-index: 2;
+}
+
+.connect-btn:hover {
+    background-color: #0ff;
+    color: #000;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .main-title {
+        font-size: 2.5rem;
+    }
+    
+    .subtitle {
+        font-size: 0.9rem;
+    }
+    
+    .hero-section {
+        padding: 0 20px;
+    }
+}
+
+/* Container Override for Full-Width Hero */
+.container {
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
 }
