--- a/styles.css
+++ b/styles.css
@@ -370,17 +370,17 @@ section h2 {
     padding: 2rem;
 }
 
-.skill-card i,
+
 .skill-card img {
-    object-fit: contain;
     position: absolute;
-    font-size: 3em;
+    width: 50px;
+    height: 50px;
 }
 
 .skill-card:hover {
     transform: translateY(-5px);
     cursor: pointer;
-    background-color: rgba(0, 255, 255, 0.499);
+    background-color: rgba(255, 255, 255, 0.807);
 }
 
 
@@ -429,7 +429,7 @@ section h2 {
     border-color: #0ff;
     outline: none;
 }
-
+  
 .submit-btn {
     width: auto;
     min-width: 200px;
@@ -442,12 +442,16 @@ section h2 {
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
 }
 
 .submit-btn:hover {
     background: #0ff;
     color: #000;
 }
+
 
 .social-links {
     display: flex;
