--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
-
+  
 html {
     -ms-overflow-style: none; 
-    scrollbar-width: none;  
+    scrollbar-width: none; 
+    scroll-behavior: smooth; 
 }
 
 /* Navbar */
